<resources>
    <string name="app_name">MedAndraOrd</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_pre_game_settings"></string>

    <!-- In-app texts/labels/words in Swedish  -->

    <string name="gametitle">Med Andra Ord</string>
    <string name="play">Spela</string>
    <string name="wordlists">Ordlistor</string>
    <string name="teamname">Lag</string>
    <string name="score">Poäng</string>
    <string name="lastround">Sista rundan!</string>

    <string name="pass">Pass</string>
    <string name="next">Nästa</string>

    <string name="outofwords">Orden tog tyävrr slut!</string>
    <string name="enterword">Ange ett ord..</string>
    <string name="enterlistname">Ange ett namn..</string>
    <string name="mergelists">Sammanfoga Listor</string>
    <string name="newlist">Ny Lista</string>
    <string name="addword">Lägg till ord</string>
    <string name="editwordlist">Redigera Lista</string>
    <string name="selectliststomerge">Välj listor att sammanfoga</string>
    <string name="cancel">Avbryt</string>
    <string name="merge">Sammanfoga</string>
    <string name="share">Dela!</string>
    <string name="home">Hem</string>

    <string name="settings">Inställningar</string>
    <string name="numberofteams">Antal lag</string>
    <string name="selectlisttoplay">Välj en lista att spela</string>
    <string name="numberofskips">Antal skips</string>
    <string name="scorelimit">Poänggräns</string>
    <string name="timelimit">Tidsgräns per runda</string>
    <string name="start">Starta!</string>







    <string-array name="teams_spinneritems">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="skips_spinneritems">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="scorelimit_spinneritems">
        <item>2</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="timelimit_spinneritems">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>


    <!-- String-lists for word sets -->

    <string-array name="easy_words">
        <item>Jultomten</item>
        <item>Hus</item>
        <item>Föräldrar</item>
        <item>Skola</item>
        <item>Jobb</item>
        <item>Mat</item>
        <item>Kossa</item>
        <item>Ägg</item>
        <item>Snygg</item>
        <item>Cykla</item>
        <item>Strumpor</item>
    </string-array>

    <string-array name="default_words">
        <item>Solglasögon</item>
        <item>Landskap</item>
        <item>Marijuana</item>
        <item>Dagdröm</item>
        <item>Arbetsplats</item>
    </string-array>


    <string-array name="hard_words">
        <item>Nepotism</item>
        <item>Dedikerad</item>
        <item>Skonsam</item>
        <item>Förklara</item>
        <item>Extremt</item>
        <item>Omen</item>
    </string-array>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_in_game_home_screen">InGameHomeScreen</string>
</resources>
