<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            style="@style/headerText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wordlists" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_all_wordlists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center"
        >

        <Button
            style="@style/myButton"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="newListButton"
            android:text="@string/newlist"
            android:layout_marginEnd="25dp"
            />

        <Button
            style="@style/myButton"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="mergeListsButton"
            android:text="@string/mergelists" />
    </LinearLayout>

</LinearLayout>